--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
-  - 4.4.4
+  - 7.6.0
+  - 8.12.0
+  - 10.11.0
+  - latest
 
 before_install:
-  - npm install
+  - yarn install
