--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-  - 9.10.0
-  - 10.11.0
-  - latest
+  - "9"
+  - "10"
+  - "iojs"
+  - "node"
 
 before_install:
   - yarn install
+
+cache: yarn
