--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "debug": "^2.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": ">=5.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": ">=2.13.0",
+    "eslint-plugin-node": ">=7.0.0",
+    "eslint-plugin-promise": ">=4.0.0",
+    "eslint-plugin-standard": ">=4.0.0",
     "grunt": "^1.0.1",
     "grunt-eslint": "^21.0.0",
     "grunt-mocha-cli": "^2.1.0",
