--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,16 @@
 version: "3.6"
 services:
   node:
-    image: node:6.14.4-alpine
+    env_file:
+      - .env
+    image: node:10.12.0-alpine
     volumes:
       - ./:/app
     working_dir:
       /app
+    networks:
+      - web
+
+networks:
+  web:
+    external: true
