--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,24 @@ node_js:
   - "node"
 
 cache: yarn
+
+install: yarn
+script:
+  - yarn lint
+  - yarn test
+
+jobs:
+  include:
+    - stage: npm release
+      if: tag IS present
+      node_js: "10"
+      script: yarn compile
+      before_deploy:
+        - cd dist
+      deploy:
+        provider: npm
+        email: "$NPM_EMAIL"
+        api_key: "$NPM_TOKEN"
+        skip_cleanup: true
+        on:
+          tags: true
