--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---
 language: node_js
 node_js:
   - "9"
@@ -9,6 +10,10 @@ cache: yarn
 install: yarn
 script:
   - yarn test
+
+after_script:
+  - yarn add coveralls
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 jobs:
   include:
