--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - yarn test
 
 after_script:
-  - yarn add coveralls
+  - yarn add -D coveralls
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 jobs:
