--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ node_js:
   - "8"
   - "10"
   - "node"
-
+branches:
+  only: 
+    - master
+    - develop
 cache: yarn
-
 install: yarn
 script:
   - yarn test
