--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ language: node_js
 node_js:
   - "10"
   - "node"
+  - "lts/*"
 branches:
   only:
     - master
     - develop
 cache: yarn
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
 install: yarn
 script:
   - yarn test
