--- a/.mergify.yml
+++ b/.mergify.yml
@@ -26,6 +26,8 @@ pull_request_rules:
       merge:
         method: merge
   - name: delete head branch after merge
-    conditions: []
+    conditions:
+      - merged
+      - closed
     actions:
       delete_head_branch: {}
