--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,7 +8,7 @@ pull_request_rules:
       merge:
         method: merge
 
-  - name: automatic merge when CI passes and 2 reviews
+  - name: automatic merge when CI passes and 1 reviews
     conditions:
       - "#approved-reviews-by>=1"
       - status-success=Travis CI - Pull Request
@@ -16,6 +16,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
+
   - name: automatic merge without review
     conditions:
       - base=master
@@ -25,9 +26,15 @@ pull_request_rules:
     actions:
       merge:
         method: merge
+
   - name: delete head branch after merge
     conditions:
       - merged
+    actions:
+      delete_head_branch: {}
+
+  - name: delete head branch after close
+    conditions:
       - closed
     actions:
       delete_head_branch: {}
