--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,6 +8,15 @@ pull_request_rules:
       merge:
         method: merge
 
+  - name: automatic merge for Greenkeeper pull requests
+    conditions:
+      - author=greenkeeper[bot]
+      - status-success=continuous-integration/travis-ci/pr
+      - status-sucess=greenkeeper/verify
+    actions:
+      merge:
+        method: merge
+
   - name: automatic merge when CI passes and 1 reviews
     conditions:
       - "#approved-reviews-by>=1"
