--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.17.0",
     "debug": "^4.1.0",
     "eslint": "^6.2.2",
     "eslint-config-standard": "^14.1.0",
