--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,7 @@ jobs:
     - stage: npm release
       if: tag IS present
       node_js: "node"
-      cache: {}
-      before_install: skip
-      install: skip
-      script: skip
-      after_success: true  # Don't skip: To trigger the deploy
+      script: yarn build
       deploy:
         provider: npm
         email: "$NPM_EMAIL"
