--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ jobs:
     - stage: npm release
       if: tag IS present
       node_js: "node"
-      script: yarn build
+      script: yarn compile
+      before_deploy:
+        - cd dist
       deploy:
         provider: npm
         email: "$NPM_EMAIL"
