--- a/package.json
+++ b/package.json
@@ -24,14 +24,11 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^4.29.2",
+    "@typescript-eslint/typescript-estree": "^4.29.2",
     "axios-mock-adapter": "^1.20.0",
     "debug": "^4.3.2",
     "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": ">=2.24.1",
-    "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": ">=5.1.0",
-    "eslint-plugin-standard": ">=5.0.0",
     "grunt": "^1.4.1",
     "grunt-eslint": "^23.0.0",
     "grunt-mocha-cli": "^7.0.0",
@@ -41,7 +38,9 @@
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^5.0.0",
     "mocha": "^9.0.3",
-    "time-grunt": "^2.0.0"
+    "time-grunt": "^2.0.0",
+    "typescript": "^4.3.5",
+    "typescript-eslint-language-service": "^4.1.5"
   },
   "private": false
 }
