--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -3,10 +3,10 @@ name: reviewdog
 on:
   push:
     branches:
-      - '!main'
+      - '!master'
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   misspell:
