--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -3,10 +3,10 @@ name: reviewdog
 on:
   push:
     branches:
-      - '!master'
+      - '!main'
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   misspell:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: misspell
         uses: reviewdog/action-misspell@v1
         with:
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: yamllint
         uses: reviewdog/action-yamllint@v1
         with:
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
@@ -48,6 +48,18 @@ jobs:
           path: "."
           pattern: "*.sh"
           exclude: "./.git/*"
+
+  hadolint:
+    name: runner / hadolint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v1
+      - name: hadolint
+        uses: reviewdog/action-hadolint@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
 
   actionlint:
     name: runner / actionlint
@@ -66,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Run dotenv-linter with code suggestions
         uses: dotenv-linter/action-dotenv-linter@v2
         with:
