--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,4 +23,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag-prefix: 'v'
+          tag-prefix: v
+          target-branch: master
