--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
   include:
     - stage: npm release
       if: tag IS present
-      node_js: "node"
+      node_js: "lts/*"
       deploy:
         provider: npm
         email: "$NPM_EMAIL"
