--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [10.x, 12.x, 14.x, 16.x, lts/*]
+        node-version: [12.x, 14.x, 16.x, lts/*]
 
     steps:
       - uses: actions/checkout@v3
